# eu4-mp-performance-patch

./: .gitignore  .gitmodules  README.md
deploy/: Caddyfile  runk.service
hooks/: .gitignore  Dockerfile  build  build-linux  build-windows  common.c  common.h  linux.c  patcher.h  windows.c
hooks/linux/: build  hook1.s  hook2.s  hook3.s  hook4.s  patcher.c  patcher.h
hooks/windows/: build  hook1.s  hook2.s  hook3.s  hook4.s  patcher.c  patcher.h
server/: .dockerignore  Cargo.toml  Dockerfile  build.rs
server/src/: main.rs  tickler.rs
