[package]
name = "runk"
version = "0.1.0"
edition = "2024"
default-run = "runk"

[[bin]]
name = "runk"
path = "src/main.rs"

[[bin]]
name = "tickler"
path = "src/tickler.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.96"
arcstr = { version = "1.2.0", features = ["serde"] }
bytes = "1.10.0"
dashmap = "6.1.0"
env_logger = "0.11.6"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
hmac = "0.12.1"
http-body-util = "0.1.2"
hyper-tungstenite = "0.17.0"
hyper-util = "0.1.10"
hyper = { version = "1.6.0", default-features=false, features = ["http1", "server"] }
json = "0.12.4"
jwt = "0.16.0"
log = "0.4.26"
prost = "0.13.5"
prost-types = "0.13.5"
random-string = "1.1.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls", "tokio-rustls"] }
url = "2.5.4"
uuid = { version = "1.15.1", features = ["v4"] }
lazy_static = "1.5.0"

[build-dependencies]
prost-build = "0.13.5"
